src/app/_components/Modal.module.scss
.modal {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0,0,0,0.5);
  z-index: 100;
  animation: fadeIn .3s ease-in-out;

  .modalContent {
    position: relative;
    width: 73rem;
    background-color: #fff;
    border-radius: 1rem;
    padding: 3rem;

    .title {
      font-family: Pretendard, sans-serif;
      font-size: 2rem;
      font-weight: bold;
      margin-bottom: 3rem;
    }
    .subTitle {
      font-size: 1.25rem;
      font-weight: bold;
      margin-bottom: .625rem;
    }

    // .submitForm {
    //   display: flex;
    // }
   
    .row + .row {
      margin-top: 2rem;
    }
    .checkboxContent {
      display: flex;
    }

    .labelContent {
      display: flex;
      gap: .625rem;
      margin-bottom: 2rem;
    }

    .checkbox {
      flex-basis: 20%;
      margin-bottom: .3rem;
    }
    .checkbox input[type="checkbox"] {
      //display: none;
      
    }

    .checkbox .label {
      color: #333;
      font-size: 1rem;
      margin-left: 0.625rem;
      cursor: pointer;
      display: flex;
      align-items: center;
    }

    .checkbox .label .labelText {
      font-size: 1rem;
      margin-left: 0.625rem;
    }

    .checkbox .checkboxSvg {
      width: 1.5625rem;
      height: 1.5625rem;
    }

    .checkbox .checkboxSquare {
      fill: var(--color-searchInput-bg);
      stroke: #da3017;
      stroke-dasharray: 800;
      stroke-dashoffset: 800;
      transition: stroke-dashoffset 0.6s ease-in;
    }

    .checkbox .checkboxTick {
      stroke: #da3017;
      stroke-dasharray: 172;
      stroke-dashoffset: 172;
      transition: stroke-dashoffset 0.6s ease-in;
    }

    .checkbox input[type="checkbox"]:checked + .label .checkboxSquare,
    .checkbox input[type="checkbox"]:checked + .label .checkboxTick {
      stroke-dashoffset: 0;
    }

    .btnGroup {
      display: flex;
      justify-content: center;
      gap: .625rem;
      .submitBtn {
        width: 12.5rem;
        margin-top: 2rem;
        color: #f4f5f5;
      font-size: 18px;
        font-family: Pretendard;
        font-weight: 700;
        text-align: center;
        background-color: #da3017;
        padding: 1rem 0;
        border-radius: 5px;
        transition: all 0.3s ease-in-out;
        display: block;
        &:hover {
          background-color: #b92b15;
      }
    }

    .closeBtn {
      font-size: 2.5rem;
      color: #da3017;
      position: absolute;
      top: 2.5rem;
      right: 2.5rem;
      transition: all 0.3s ease-in-out;
      &:hover {
        color: #b92b15;
      }
    }

  }
}

  .hidden {
    display: none;
    opacity: 0;
  }

  @media (max-width: 768px) {
    .modalContent {
      width: 95%;
      form {
        height: 54vh;
        overflow: auto;
      }
      .checkboxContent {
        flex-direction: column;
      }
      .label {
        margin-left: 0;
      }
    }
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }


}

